# polito-gan

./: .gitignore  AGENT.md  README.md  pyproject.toml
.obsidian/: workspace.json
log_execution_pi/: log_execution_1.md  log_execution_2.md
notes/: 2024-05-09-intro-gan.md  3d-data-representations.md  bayesian-deep-learning.md  course-introduction.md  generative-adversarial-networks.md  index.md  latent-diffusion-models.md  ml-agents.md  normalizing-flows.md  reinforcement-learning.md  transformers-autoregressive.md  variational-autoencoders.md
raw/lesson-transcripts/: 01. Intro and Generative adversarial networks.md  02. Transformers and autoregressive pt 1.md  03. Transformers and autoregressive pt 2.md  04. Latent diffusion models pt 1.md  05. Normalizing flow and Latent diffusion models pt 2.md  06. Reinforcement learning.md  07. ML Agents.md
raw/slides-md/: 00. Course introduction.md  01. Generative adversarial networks.md  02. Transformers and autoregressive.md  03. Variational autoencoders.md  04. 3D data representations.md  05. Latent diffusion models - part I.md  05. Normalizing flows.md  07. Latent diffusion models - part II.md  08. Reinforcement learning.md  09. ML Agents.md  Bayes_handout.md
skills/: convert_slides.py  skill-Lecture-to-Notes.md
wiki/: index.md  log.md  overview.md
wiki/models/: 3d-data.md  bayesian-deep-learning.md  gan.md  kiwi.md  latent-diffusion.md  normalizing-flows.md  transformers.md
wiki/rl/: rl-overview.md
wiki/tools/: mlagents.md
